alignment fix for modal

--- a/src/components/PenjahitModal.css
+++ b/src/components/PenjahitModal.css
@@ -7,8 +7,8 @@
 
 .penjahitModal__description {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-evenly;
+  align-items: center;
+  justify-content: flex-start;
   margin-top: 10px;
 }
 
